package com.virgen.peregrina.demo.data.request

data class LoginRequest(
    val uuid: String,
    val email: String
)