package com.virgen.peregrina.demo.repository

import com.virgen.peregrina.demo.data.entity.BlogPost
import org.springframework.data.jpa.repository.JpaRepository
import org.springframework.stereotype.Repository

@Repository
interface BlogPostRepository : JpaRepository<BlogPost, Long>
