package com.virgen.peregrina.demo.service

import com.virgen.peregrina.demo.data.model.ReplicaModel
import com.virgen.peregrina.demo.util.component.Service

interface ReplicaService : Service<ReplicaModel> {




}